--- a/client/src/components/CreateDog/CreateDog.module.css
+++ b/client/src/components/CreateDog/CreateDog.module.css
@@ -1,22 +1,52 @@
+.dogForm{
+  background-color: #FFD166;
+}
 .goBack {
-    margin: 1rem;
-    height: 4rem;
-    width: 4rem;
-    border-radius: 2rem;
-    cursor: pointer;
-    background-color: #EF476F;
-    color: #FCFCFC;
-    border-style: none;
-    font-family: 'Rubik Mono One', sans-serif;
+  margin: 1rem;
+  height: 4rem;
+  width: 4rem;
+  border-radius: 2rem;
+  cursor: pointer;
+  background-color: #EF476F;
+  color: #FCFCFC;
+  border-style: none;
+  font-family: 'Rubik Mono One', sans-serif;
+}
+.create {
+  margin: 1rem;
+  height: 4rem;
+  width: 8rem;
+  border-radius: 2rem;
+  cursor: pointer;
+  background-color: #EF476F;
+  color: #FCFCFC;
+  border-style: none;
+  font-family: 'Rubik Mono One', sans-serif;
+}
+label{
+  color: #26547C
+}
+input{
+  border-radius: 1.5rem;
+  height: 1.5rem;
+  width: auto;
 }
 
-input.danger {
-    border: 2px solid red;
-  }
-  .danger {
-    border: 2px solid red;
-    border-radius: 1rem;
-    font-size: 0.9rem;
-    text-decoration-color: #EF476F;
-  }
-  
+input:invalid {
+  border: 2px dashed #EF476F;
+}
+input:focus:invalid {
+  box-shadow:#EF476F;
+}
+
+input:valid {
+  border-color: #06D6A0;
+}
+
+.guide{
+  color: #26547C;
+  font-size: 0.8rem;
+  font-family: 'Julius Sans One', sans-serif;
+  margin: 0.5rem;
+
+}
