--- a/client/src/components/Home/Home.module.css
+++ b/client/src/components/Home/Home.module.css
@@ -1,7 +1,11 @@
 nav {
-
     background-color: #FCFCFC;
     height: 10rem;
+}
+
+.nav:hover {
+    background-color: #FFD166;
+    transition: 8000ms;
 }
 
 .fCapa {
@@ -10,9 +14,21 @@ nav {
     align-items: center;
 }
 
+.sorts {
+    display: flex;
+    align-items: center;
+}
+
+.sorth4 {
+    font-size: 1rem;
+    color: #26547C;
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+
 .sCapa {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     height: auto;
     background-color: #FFD166;
@@ -45,11 +61,19 @@ h1 {
     font-size: 3rem;
 }
 
+h1:hover {
+    color: #EF476F;
+    transition: 1900ms;
+}
+
 body {
     background-color: #FCFCFC;
     /* background: linear-gradient(to top, #c19954, #FCFCFC) */
 }
-
+.SecondHalf:hover{
+    background-color: #FFD166;
+    transition: 8000ms;
+}
 .cardsGrid {
     display: grid;
     grid-template-columns: repeat(4, 230px);
@@ -59,15 +83,9 @@ body {
 }
 
 .logoImg:hover {
-    transition: 800ms;
-    height: 8rem;
+    transition: 1800ms;
     transform: rotate(1turn);
 }
-
-/* .cards:hover {
-    opacity: 0.8;
-    transition: 400ms;
-  } */
 
 @media (max-width: 1070px) {
     .cardsGrid {
@@ -77,7 +95,6 @@ body {
     .nav {
         display: flex;
         flex-direction: column;
-
     }
 }
 
