delete completo, paginado nuevo, edit/put incompleto

--- a/client/src/components/About/About.module.css
+++ b/client/src/components/About/About.module.css
@@ -1,3 +1,8 @@
+.container:hover{
+    transition: 10000ms;
+    background-color: #FFD166;
+    margin-top: 0rem;
+}
 .h1About {
     display: flex;
     justify-content: center;
