routes modularizadas, corregidos bugs de keys en home y /dog

--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -31,7 +31,7 @@ h4 {
 h5 {
   margin-top: 0.1rem;
   margin-bottom: 0;
-  color: var(--color4);
+  color: #26547C; 
   font-family: 'Julius Sans One', sans-serif;
 }
 
