--- a/client/src/components/Home/Home.module.css
+++ b/client/src/components/Home/Home.module.css
@@ -67,7 +67,7 @@ h1:hover {
 }
 
 body {
-    background-color: #FCFCFC;
+    background-color: #f3dca7;
     /* background: linear-gradient(to top, #c19954, #FCFCFC) */
 }
 .SecondHalf:hover{
